force-app/main/default/objects/Servicing_Division__c/Servicing_Division__c.object-meta.xml
<CustomObject>
    <description>Used as lookup on PSR, Prospect, and Quote.  Also used as division names for Quote Product Search.  Any name changes to a Servicing Division can have repercussions throughout the system - beware when making any updates to these records.</description>
    <label>Servicing Division</label>
    <nameField>
        <label>Servicing Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicing Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>