force-app/main/default/objects/Servicing_Division__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this an Active Division?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>