force-app/main/default/objects/Servicing_Division__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Area for SFDC Admins to put notes</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>