force-app/main/default/objects/Servicing_Division__c/fields/Corrugated_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Corrugated_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referenced in a flow to assign ownership of the work order</description>
    <inlineHelpText>Corrugated work orders related  will be owned by this user upon creation</inlineHelpText>
    <label>Corrugated Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Servicing_Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>