force-app/main/default/objects/Servicing_Division__c/fields/Division_Address__c.field-meta.xml
<CustomField>
    <fullName>Division_Address__c</fullName>
    <label>Division Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>