force-app/main/default/objects/Servicing_Division__c/fields/Division_City__c.field-meta.xml
<CustomField>
    <fullName>Division_City__c</fullName>
    <label>Division City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>