force-app/main/default/objects/Servicing_Division__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <label>Division Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>