force-app/main/default/objects/Servicing_Division__c/fields/Division_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Division_Composite_Key__c</fullName>
    <externalId>true</externalId>
    <label>Division Composite Key</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>