force-app/main/default/objects/Servicing_Division__c/fields/Division_Country__c.field-meta.xml
<CustomField>
    <fullName>Division_Country__c</fullName>
    <label>Division Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>MEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>