force-app/main/default/objects/Servicing_Division__c/fields/Division_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Division_Name_Formula__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  Division_Composite_Key__c</formula>
    <label>Division Name Formula</label>
    <type>Text</type>
</CustomField>