force-app/main/default/objects/Servicing_Division__c/fields/Division_State__c.field-meta.xml
<CustomField>
    <fullName>Division_State__c</fullName>
    <label>Division State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>