force-app/main/default/objects/Servicing_Division__c/fields/Division_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Zip_Code__c</fullName>
    <label>Division Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>