force-app/main/default/objects/Servicing_Division__c/fields/Dummy_Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Bill_To_Number__c</fullName>
    <label>Dummy Bill To Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>