force-app/main/default/objects/Servicing_Division__c/fields/eBusiness_Manager__c.field-meta.xml
<CustomField>
    <fullName>eBusiness_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>eBusiness Manager for e-commerce for my customer</description>
    <label>eBusiness Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eBusinessManagerUser</relationshipName>
    <type>Lookup</type>
</CustomField>