force-app/main/default/objects/Servicing_Division__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Fed in from Evo - Date the location closed</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>