force-app/main/default/objects/Servicing_Division__c/fields/SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM__c</fullName>
    <label>SYSTEM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>