force-app/main/default/objects/Servicing_Division__c/fields/System_Code__c.field-meta.xml
<CustomField>
    <fullName>System_Code__c</fullName>
    <label>System Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>