force-app/main/default/objects/Servicing_Division__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Fed in from Evo in new integration with SFDC SD object</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Veritiv</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Kitting / Converting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>