force-app/main/default/objects/Servicing_Division__c/validationRules/Only_Admins_can_update_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admins_can_update_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Name ) ,
$User.ProfileId &lt;&gt; &quot;00e70000000j606&quot;, 
$User.ProfileId &lt;&gt; &quot;00e70000000swa5&quot; 
)</errorConditionFormula>
    <errorMessage>You do not have the authority to change the Servicing Division Name.  Please cancel the update.</errorMessage>
</ValidationRule>