force-app/main/default/objects/Servicing_Division__c/listViews/Active_Servicing_Divisions.listView-meta.xml
<ListView>
    <fullName>Active_Servicing_Divisions</fullName>
    <columns>NAME</columns>
    <columns>System_Code__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_Composite_Key__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Servicing Divisions</label>
</ListView>