force-app/main/default/objects/Servicing_Division__c/listViews/Active_X_Divisions.listView-meta.xml
<ListView>
    <fullName>Active_X_Divisions</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Division_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>System_Code__c</field>
        <operation>equals</operation>
        <value>X</value>
    </filters>
    <label>Active X Divisions</label>
    <language>en_US</language>
</ListView>