force-app/main/default/objects/Servicing_Division__c/listViews/All_with_Created_Modified_Dates.listView-meta.xml
<ListView>
    <fullName>All_with_Created_Modified_Dates</fullName>
    <columns>NAME</columns>
    <columns>Division_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Division_Composite_Key__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All with Created/Modified Dates</label>
    <language>en_US</language>
</ListView>