force-app/main/default/objects/Servicing_Division__c/listViews/Corrugated_Specialists.listView-meta.xml
<ListView>
    <fullName>Corrugated_Specialists</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Division_Composite_Key__c</columns>
    <columns>Division_Code__c</columns>
    <columns>System_Code__c</columns>
    <columns>Division_City__c</columns>
    <columns>Corrugated_Specialist__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Corrugated Specialists</label>
</ListView>