force-app/main/default/objects/Servicing_Division__c/listViews/Inactive_Servicing_Divisions.listView-meta.xml
<ListView>
    <fullName>Inactive_Servicing_Divisions</fullName>
    <columns>NAME</columns>
    <columns>Division_Composite_Key__c</columns>
    <columns>System_Code__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>System_Code__c</field>
        <operation>equals</operation>
        <value>nu,ma,03,pc</value>
    </filters>
    <label>Inactive Servicing Divisions</label>
</ListView>