force-app/main/default/objects/Servicing_Division__c/listViews/Vos_Event_5_New_Divisions.listView-meta.xml
<ListView>
    <fullName>Vos_Event_5_New_Divisions</fullName>
    <columns>NAME</columns>
    <columns>System_Code__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Corrugated_Specialist__c</columns>
    <columns>Division_Address__c</columns>
    <columns>Division_City__c</columns>
    <columns>Division_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/31/2018 12:00 AM</value>
    </filters>
    <label>Vos Event 5 New Divisions</label>
    <language>en_US</language>
</ListView>