force-app/main/default/objects/Servicing_Division__c/listViews/VOS_NU.listView-meta.xml
<ListView>
    <fullName>VOS_NU</fullName>
    <columns>NAME</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_State__c</columns>
    <columns>System_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Code__c</field>
        <operation>equals</operation>
        <value>NU</value>
    </filters>
    <label>VOS NU</label>
    <language>en_US</language>
</ListView>