force-app/main/default/objects/Servicing_Division__c/listViews/VOS_NU_ONLY_ACTIVE.listView-meta.xml
<ListView>
    <fullName>VOS_NU_ONLY_ACTIVE</fullName>
    <columns>NAME</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_State__c</columns>
    <columns>System_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Code__c</field>
        <operation>equals</operation>
        <value>NU</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VOS NU ONLY ACTIVE</label>
</ListView>