force-app/main/default/objects/Servicing_Division__c/listViews/VOS_SW_03.listView-meta.xml
<ListView>
    <fullName>VOS_SW_03</fullName>
    <columns>NAME</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_State__c</columns>
    <columns>System_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Code__c</field>
        <operation>equals</operation>
        <value>03,SW</value>
    </filters>
    <label>VOS SW/03</label>
    <language>en_US</language>
</ListView>