force-app/main/default/objects/Servicing_Division__c/listViews/X3PL_Divisions.listView-meta.xml
<ListView>
    <fullName>X3PL_Divisions</fullName>
    <columns>NAME</columns>
    <columns>SYSTEM__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_Composite_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>3pl</value>
    </filters>
    <label>3PL Divisions</label>
    <language>en_US</language>
</ListView>